--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.4.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dns": "^0.1.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mapbox-gl": "^3.0.1",
+    "mapbox-gl": "^3.1.0",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
     "pug": "^3.0.2"
